<resources>
    <string name="app_name">Group Project</string>
    <string name="play_button">Play</string>
    <string name="game_settings">Settings</string>
    <string name="team_member_credits">Credits</string>
    <string name="game_title">Tiletris</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="game_music">Music</string>
    <string name="default_tile">[---]</string>
    <string name="default_score">Score: 404</string>
    <string name="default_highScore">HighScore: 666</string>
    <string name="userTile_name">Player Tiles:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replay">Replay</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="how_to_play">How to Play</string>
    <string name="tutorial">Don\'t let the enemy tiles reach the bottom! Enemy tiles will randomly
                            fall from the top of the grid. Luckily you have five types of tiles that will randomly
                            generate as well! All player tile actions will activate on collision with an enemy tile.
                            In addition to destroying the enemy tile it collides with, each player tile has a unique function.
                            Just tap the tile you want to place from Player Tiles and tap where you want to put it on the board.
                            Tiles can only be placed in the bottom 2 rows.</string>
    <string name="sword_text">The <b>Sword</b> tile destroys any enemy tiles in the two squares above the collision.</string>
    <string name="greatsword_text">The <b>Great</b> Sword tile destroys all enemy tiles above the collision.</string>
    <string name="dagger_text">The <b>Dagger</b> tile destroys each enemy tile that are diagonally above the placed position. It will also destroy an enemy tile on collision.</string>
    <string name="bishop_text">The <b>Bishop</b> tile destroys each enemy tile that are diagonally above the placed position. It will destroy one enemy tile above the diagonal tiles and it will also destroy an enemy tile on collision.</string>
    <string name="bomb_text">The <b>Bomb</b> tile destroys all adjacent enemy tiles around it.</string>
    <string name="connection_error">Can\'t Log In to Play Services. Select a valid Google Play Games account, or check your connection and try again.</string>
    <string name="not_logged_in_error">You must log in to Google Play to view the leaderboard. Press OK to log in </string>
    <string name="logged_in_success">You have been logged in successfully! You can now access the leaderboard</string>
    <string name="credits_id">Credits</string>
    <string name="user1">Jacob Kessinger</string>
    <string name="user2">Camden Morgan</string>
    <string name="user3">Godwin Bime</string>
    <string name="user4">Mangsa Limbu Pheudin</string>
    <string name="user5">Timothy Haag</string>
    <string name="game_over">Game Over</string>
    <string name="leaderboard">Leaderboard</string>

</resources>