<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/castle2"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/press_start_2p"
        android:shadowColor="#555555"
        android:shadowDx="10.0"
        android:shadowDy="2.0"
        android:shadowRadius="5.0"
        android:text="@string/game_title"
        android:textColor="#000000"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="#8114FF"
        android:fontFamily="@font/suez_one"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/play_button"
        app:cornerRadius="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:strokeColor="@color/black"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="#8114FF"
        android:fontFamily="@font/suez_one"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/game_settings"
        app:cornerRadius="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_start_button"
        app:strokeColor="@color/black"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/credits_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_weight="1"
        android:backgroundTint="#8114FF"
        android:fontFamily="@font/suez_one"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/team_member_credits"
        app:cornerRadius="@dimen/button_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        app:strokeColor="@color/black"
        app:strokeWidth="1sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
