<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/parchment"
    tools:context=".TutorialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/howtoplay_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/press_start_2p"
                android:shadowColor="#555555"
                android:shadowDx="10.0"
                android:shadowDy="2.0"
                android:shadowRadius="5.0"
                android:text="@string/how_to_play"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tutorial_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="15dp"
                android:text="@string/tutorial"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/howtoplay_text" />

            <ImageView
                android:id="@+id/sword_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tutorial_text"
                app:srcCompat="@drawable/swordtile" />

            <ImageView
                android:id="@+id/greatsword_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sword_image"
                app:srcCompat="@drawable/greatswordtile" />

            <ImageView
                android:id="@+id/dagger_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/greatsword_image"
                app:srcCompat="@drawable/daggertile" />

            <ImageView
                android:id="@+id/bishop_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dagger_image"
                app:srcCompat="@drawable/axetile" />

            <ImageView
                android:id="@+id/bomb_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bishop_image"
                app:srcCompat="@drawable/bombtile" />

            <TextView
                android:id="@+id/sword_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/sword_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/sword_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sword_image"
                app:layout_constraintTop_toTopOf="@+id/sword_image" />

            <TextView
                android:id="@+id/greatsword_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/greatsword_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/greatsword_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/greatsword_image"
                app:layout_constraintTop_toTopOf="@+id/greatsword_image" />

            <TextView
                android:id="@+id/dagger_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/dagger_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/dagger_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dagger_image"
                app:layout_constraintTop_toTopOf="@+id/dagger_image" />

            <TextView
                android:id="@+id/bishop_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/bishop_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/bishop_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bishop_image"
                app:layout_constraintTop_toTopOf="@+id/bishop_image" />

            <TextView
                android:id="@+id/bomb_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/bomb_text"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bomb_image"
                app:layout_constraintTop_toTopOf="@+id/bomb_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>