<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <ImageButton
        android:id="@+id/tilePButton3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="false"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilePButton0"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tilePButton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/tilePButton3"
        app:layout_constraintStart_toStartOf="@+id/spaceMaker"
        app:layout_constraintTop_toTopOf="@+id/tilePButton0"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tilePButton1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/spaceMaker"
        app:layout_constraintStart_toEndOf="@+id/tilePButton0"
        app:layout_constraintTop_toTopOf="@+id/tilePButton0"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tilePButton0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/tileImage30"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage20"
        app:layout_constraintTop_toTopOf="@+id/tileImage32"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage31"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage21"
        app:layout_constraintTop_toTopOf="@+id/tileImage32"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage32"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage22"
        app:layout_constraintTop_toBottomOf="@+id/tileImage22"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage33"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage23"
        app:layout_constraintTop_toTopOf="@+id/tileImage32"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage34"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage24"
        app:layout_constraintTop_toTopOf="@+id/tileImage32"
        app:srcCompat="@drawable/emptytile" />

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/default_score"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/default_highScore"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/userTile_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tileIButton52" />

    <ImageView
        android:id="@+id/tileImage10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tileImage12"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage20"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage10"
        app:layout_constraintTop_toTopOf="@+id/tileImage22"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage21"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage11"
        app:layout_constraintTop_toTopOf="@+id/tileImage22"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage22"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage12"
        app:layout_constraintTop_toBottomOf="@+id/tileImage12"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage23"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage13"
        app:layout_constraintTop_toTopOf="@+id/tileImage22"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage24"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@+id/tileImage14"
        app:layout_constraintTop_toTopOf="@+id/tileImage22"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage11"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toStartOf="@+id/tileImage12"
        app:layout_constraintStart_toEndOf="@+id/tileImage10"
        app:layout_constraintTop_toTopOf="@+id/tileImage12"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage12"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTxt"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage13"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toStartOf="@+id/tileImage14"
        app:layout_constraintStart_toEndOf="@+id/tileImage12"
        app:layout_constraintTop_toTopOf="@+id/tileImage12"
        app:srcCompat="@drawable/emptytile" />

    <ImageView
        android:id="@+id/tileImage14"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tileImage12"
        app:srcCompat="@drawable/emptytile" />

    <ImageButton
        android:id="@+id/tileIButton40"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileImage30"
        app:layout_constraintTop_toTopOf="@+id/tileIButton42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton41"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileImage31"
        app:layout_constraintTop_toTopOf="@+id/tileIButton42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton42"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileImage32"
        app:layout_constraintTop_toBottomOf="@+id/tileImage32"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton43"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileImage33"
        app:layout_constraintTop_toTopOf="@+id/tileIButton42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton44"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileImage34"
        app:layout_constraintTop_toTopOf="@+id/tileIButton42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton54"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileIButton44"
        app:layout_constraintTop_toTopOf="@+id/tileIButton52"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton53"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileIButton43"
        app:layout_constraintTop_toTopOf="@+id/tileIButton52"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton52"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileIButton42"
        app:layout_constraintTop_toBottomOf="@+id/tileIButton42"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton51"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileIButton41"
        app:layout_constraintTop_toTopOf="@+id/tileIButton52"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tileIButton50"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/tileIButton40"
        app:layout_constraintTop_toTopOf="@+id/tileIButton52"
        app:srcCompat="@drawable/emptytile"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/spaceMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilePButton0" />

    <FrameLayout
        android:id="@+id/game_over_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>